[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/gui/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/title.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/ui_open.wav" type="AudioStream" id=3]


[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="Panel" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -178.0
margin_right = 200.0
margin_bottom = 178.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer"]
margin_right = 368.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 368.0
margin_bottom = 86.0
rect_min_size = Vector2( 0, 32 )
text = "Resume"

[node name="SaveButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 90.0
margin_right = 368.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 32 )
text = "Save race"

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 126.0
margin_right = 368.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 32 )
text = "Load race"

[node name="Spacer" type="Control" parent="Panel/VBoxContainer"]
margin_top = 162.0
margin_right = 368.0
margin_bottom = 170.0
rect_min_size = Vector2( 0, 8 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
editor/display_folded = true
margin_top = 174.0
margin_right = 368.0
margin_bottom = 190.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 38.0
margin_bottom = 15.0
text = "Music"

[node name="MusicVolumeSlider" type="HSlider" parent="Panel/VBoxContainer/HBoxContainer"]
margin_left = 42.0
margin_right = 368.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.05
ticks_on_borders = true

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer"]
margin_top = 194.0
margin_right = 368.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 16 )

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
margin_top = 214.0
margin_right = 368.0
margin_bottom = 246.0
rect_min_size = Vector2( 0, 32 )
text = "Quit"

[node name="Spacer3" type="Control" parent="Panel/VBoxContainer"]
margin_top = 250.0
margin_right = 368.0
margin_bottom = 258.0
rect_min_size = Vector2( 0, 8 )

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
self_modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_top = 262.0
margin_right = 368.0
margin_bottom = 327.0
text = ""
align = 1

[node name="OpenSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="value_changed" from="Panel/VBoxContainer/HBoxContainer/MusicVolumeSlider" to="." method="_on_MusicVolumeSlider_value_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
